--- a/vehicle/.project
+++ b/vehicle/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Vehicle</name>
+	<name>vehicle</name>
 	<comment></comment>
 	<projects>
 	</projects>
